--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,6 +9,7 @@ touch_scroll_multiplier          20
 strip_trailing_spaces            always
 shell_integration                no-rc
 cursor_shape                     beam
+confirm_os_window_close          0
 
 cursor                           #ebdbb2
 foreground                       #ebdbb2
@@ -99,7 +100,7 @@ map ctrl+я send_text all \x1a
 map ctrl+х send_text all \x1b
 map ctrl+ъ send_text all \x1d
 
-background_opacity 0.95
+background_opacity 0.69
 
 window_margin_width 10
 
