--- a/.config/xfce4/panel/netload-16.rc
+++ b/.config/xfce4/panel/netload-16.rc
@@ -4,7 +4,7 @@ Show_Bars=true
 Colorize_Values=false
 Color_In=rgb(94,92,100)
 Color_Out=rgb(213,194,222)
-Text=
+Text=Net
 Network_Device=wlan0
 Max_In=4096
 Max_Out=4096
